# liblinphone

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  ChangeLog.md  NEWS  Password used to change the username is does not work  README.md  autogen.sh  config.h.cmake  configure.ac  linphone.pc.in
console/: CMakeLists.txt  commands.c  linphonec.c  linphonec.h  shell.c  sipomatic.c  sipomatic.h  wav2raw.c
coreapi/: CMakeLists.txt  FlexiAPIClient.cc  FlexiAPIClient.hh  TunnelManager.cc  TunnelManager.hh  account_creator.c  account_creator_flexiapi.cc  account_creator_flexiapi.hh  account_creator_private.h  account_creator_service.c  account_creator_utils.c  account_creator_xmlrpc.c  authentication.c  buffer.c  call_log.c  call_params.c  call_params.h  callbacks.c  carddav.c  carddav.h  chat.c  chat_file_transfer.c  conference-cbs.h  conference.cc  conference.cpp  conference.h  conference_private.h  contact_providers_priv.h  contactprovider.c  core_private.h  dict.c  ec-calibrator.c  echo-tester.c  enum.c  enum.h  error_info.c  event.c  event.h  factory.c  fonis.c  (+67 more)
coreapi/account_creator/: connector_flexiapi.cc  connector_xmlrpc.cc  main.cc  private.h  service.c  utils.c  xmlrpc.cc
coreapi/bellesip_sal/: sal_address_impl.c  sal_impl.c  sal_impl.h  sal_op_call.c  sal_op_call_transfer.c  sal_op_events.c  sal_op_impl.c  sal_op_presence.c  sal_sdp.c
coreapi/help/: CMakeLists.txt
daemon/: CMakeLists.txt  Makefile.am  daemon-pipetest.c  daemon.cc  daemon.h
daemon/commands/: adaptive-jitter-compensation.cc  adaptive-jitter-compensation.h  answer.cc  answer.h  audio-codec-get.cc  audio-codec-get.h  audio-codec-move.cc  audio-codec-move.h  audio-codec-set.cc  audio-codec-set.h  audio-codec-toggle.cc  audio-codec-toggle.h  audio-stream-start.cc  audio-stream-start.h  audio-stream-stats.cc  audio-stream-stats.h  audio-stream-stop.cc  audio-stream-stop.h  auth-infos-clear.cc  auth-infos-clear.h  call-mute.cc  call-mute.h  call-pause.cc  call-pause.h  call-resume.cc  call-resume.h  call-stats.cc  call-stats.h  call-status.cc  call-status.h  call-transfer.cc  call-transfer.h  call.cc  call.h  cn.cc  cn.h  conference.cc  conference.h  config.cc  configcommand.h  (+48 more)
include/: CMakeLists.txt
include/MSVC/: inttypes.h  stdint.h
include/Modules/: include.h  module.modulemap  swift-umbrella.h
include/linphone/: FlexiAPIClient.hh  Makefile.am  account_creator.h  account_creator_service.h  auth_info.h  buffer.h  call.h  call_log.h  call_params.h  call_stats.h  callbacks.h  chat.h  conference.h  contactprovider.h  core.h  core_utils.h  defs.h  dictionary.h  error_info.h  event.h  factory.h  flexi-api-client.h  friend.h  friendlist.h  headers.h  im_encryption_engine.h  im_notif_policy.h  info_message.h  ldapprovider.h  linphone_proxy_config.h  linphone_tunnel.h  linphonecore.h  linphonecore_utils.h  linphonefriend.h  linphonepresence.h  logging.h  lpconfig.h  misc.h  nat_policy.h  payload_type.h  (+12 more)
include/sal/: sal.h
libxsd/: CMakeLists.txt  FLOSSE  LICENSE  README
plugins/example/: CMakeLists.txt  Info.plist.in  config.h.cmake  exampleplugin.cpp
share/: CMakeLists.txt  Makefile.am  ics_grammar  identity_grammar  linphone.appdata.xml  mwi_grammar  rootca.cmake  rootca.pem  silence.mkv
share/Modules/: include.h  module.modulemap
share/rings/: CMakeLists.txt
src/: CMakeLists.txt  FlexiAPIClient.cc  FlexiAPIClient.hh  enums.h
src/account/: account-device.cpp  account-device.h  account-params.cpp  account-params.h  account.cpp  account.h
src/account-manager-services/: account-manager-services-request.cpp  account-manager-services-request.h  account-manager-services.cpp  account-manager-services.h
src/account_creator/: connector_flexiapi.cpp  connector_xmlrpc.cpp  flexi-api-client.cpp  main.cpp  private.h  service.cpp  utils.cpp
src/address/: address-p.h  address-parser.cpp  address-parser.h  address.cpp  address.h  identity-address-parser.cpp  identity-address-parser.h  identity-address.cpp  identity-address.h  simple-address.h
src/alert/: alert.cpp  alert.h
src/auth-info/: auth-info.cpp  auth-info.h  auth-stack.cpp  auth-stack.h  bearer-token.cpp  bearer-token.h
src/buffer/: buffer.cpp  buffer.h
src/c-wrapper/: c-wrapper.cpp  c-wrapper.h  list-holder.h
src/call/: call-log.cpp  call-log.h  call-p.h  call-stats.cpp  call-stats.h  call.cpp  call.h  encryption-status.cpp  encryption-status.h  local-conference-call-p.h  local-conference-call.cpp  local-conference-call.h  remote-conference-call-p.h  remote-conference-call.cpp  remote-conference-call.h
src/conference/: ccmp-conference-scheduler.cpp  ccmp-conference-scheduler.h  client-conference.cpp  client-conference.h  conference-context.cpp  conference-context.h  conference-enums.cpp  conference-enums.h  conference-id-params.cpp  (+43 more)
tester/: CMakeLists.txt  Makefile.am  account-creator-flexiapi-tester.cpp  account_creator_flexiapi_tester.c  account_creator_flexiapi_tester.cpp  account_creator_local_tester.c  account_creator_tester.c  account_creator_xmlrpc_tester.c  account_manager_services_tester.c  account_tester.c  accountmanager.c  alerts_tester.cpp  audio-quality-tester.cpp  audio_bypass_tester.c  audio_bypass_wav_header.h  audio_quality_tester.cpp  audio_quality_tester.h  audio_routes_tester.c  audio_video_conference_tester.c  bearer-auth.cpp  call-twisted-cases.cpp  call_flexfec_tester.cpp  call_ice.c  call_ice_tester.c  call_ice_tester.cpp  call_multi_tester.c  call_multicast_tester.c  call_push_incoming_tester.c  call_race_conditions.c  call_recovery.c  call_recovery_tester.c  call_secure_tester.c  call_secure_tester.cpp  call_single_tester.c  call_tester.c  call_video_tester.c  call_video_tester.cpp  call_with_rtp_bundle.c  call_with_rtp_bundle_tester.c  capability_negotiation_tester.c  (+109 more)
tools/: CMakeLists.txt  abstractapi.py  auto_answer.c  genapixml.py  linphone-sample.py  lpc2xml_jni.cc  lpc2xml_test.c  lpconfig_items.py  lpsendmsg.c  metadoc.py  metaname.py  my_jni.h  sip_client.cpp  sip_client.hpp  test_ecc.c  test_lsd.c  test_numbers.c  xml2lpc_jni.cc  xml2lpc_test.c
(+1393 files in other folders)
